test/tests/operators/from_microsoft_graph/error_authority.txt
error: invalid `auth.authority` URL: need more
  --> tests/operators/from_microsoft_graph/error_authority.tql:10:8
   |
10 |   auth={
   |        ^ 
   |
